--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,11 @@ code {
 .container {
   margin: 70px;
 }
+
+.button_container {
+  margin-bottom: 30px;
+}
+.btn {
+  margin-right: 20px;
+  padding: 5px 20px;
+}
