Changed buttons displaying: prev to the left, next to the right

--- a/src/index.css
+++ b/src/index.css
@@ -18,8 +18,12 @@ code {
 
 .button_container {
   margin-bottom: 30px;
+  display: flex;
+  justify-content: space-between;
 }
+
 .btn {
   margin-right: 20px;
   padding: 5px 20px;
+
 }
